--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
+      <!-- Nav items -->
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item">
@@ -69,7 +70,7 @@
         </ul>
       </div>
     </nav>
-
+<!-- My Description -->
     <div class="container-fluid p-0">
       <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
         <div class="w-100">
@@ -98,7 +99,7 @@
       </section>
 
       <hr class="m-0" />
-
+<!-- Experience in summary form -->
       <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
         <div class="w-100">
           <h2 class="mb-0">Experience</h2>
@@ -162,7 +163,7 @@
       </section>
 
       <hr class="m-0" />
-
+<!-- Education -->
       <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
         <div class="w-100">
           <h2 class="mb-1">Education</h2>
@@ -220,7 +221,7 @@
       </section>
 
       <hr class="m-0" />
-
+<!-- Technical skills -->
       <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
         <div class="w-100">
           <h2 class="mb-1">Skills</h2>
@@ -341,7 +342,7 @@
       </section>
 
       <hr class="m-0" />
-
+<!-- Extra curricular activities -->
       <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
         <div class="w-100">
           <h2 class="mb-5">EXTRA CURRICULAR ACTIVITIES</h2>
@@ -354,7 +355,7 @@
       </section>
 
       <hr class="m-0" />
-
+<!-- Achievments -->
       <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
         <div class="w-100">
           <h2 class="mb-5">ACHIEVEMENTS</h2>
